doc: modify swagger & update readme
