# docs/swagger.yaml
@@ -3,12 +3,17 @@ info:
   title: booking-event
   version: 1.0.0
 servers:
-  - url: http://localhost:5000
+  - url: http://{{base_url}}
 components:
   securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
+    inheritAuth:
+      type: http
+      scheme: inherit
+security:
+  - inheritAuth: []
 tags:
   - name: auth
   - name: event
@@ -102,7 +107,7 @@ paths:
             schema:
               type: object
               example:
-                name: hr company 1
+                name: vendor 1
                 password: abc123
       responses:
         '202':
@@ -153,6 +158,41 @@ paths:
                 code: 400
                 success: false
                 message: name or password invalid
+  /api/user:
+    get:
+      tags:
+        - auth
+      summary: user profile
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: OK
+          headers:
+            Content-Type:
+              schema:
+                type: string
+                example: application/json; charset=utf-8
+            Date:
+              schema:
+                type: string
+                example: Fri, 13 Dec 2024 07:08:46 GMT
+            Content-Length:
+              schema:
+                type: integer
+                example: '129'
+          content:
+            application/json:
+              schema:
+                type: object
+              example:
+                code: 200
+                success: true
+                message: User Data retrieved successfully
+                data:
+                  ID: de3563c43c
+                  Name: vendor 1
+                  Role_id: 2
   /api/event/hr:
     post:
       tags:
